Add a slide about Jourdan's physical equality.

--- a/physical_equality.tex
+++ b/physical_equality.tex
@@ -151,6 +151,11 @@ let rec push t v =
 \end{minted}
 \end{frame}
 
+\begin{frame}{Jourdan's physical equality}
+\centering
+\includegraphics[scale=0.5]{images/jourdan_physical_equality.pdf}
+\end{frame}
+
 \begin{frame}[fragile]{\texttt{Eio.Rcfd}}
 \begin{minted}{ocaml}
 type state = Open of Unix.file_descr | Closing of (unit -> unit)
